# video-segment

./: .gitignore  README.md  explainer.md  main.py  pyproject.toml
pipeline/: entity_model.py  entity_tracker.py  georef.py  scene_analyzer.py  segmenter.py  stabilizer.py  state_analyzer.py  tracker.py  visualizer.py
tools/: pick_points.py
