[project]
name = "video-segment"
version = "0.1.0"
description = "Local video segmentation pipeline: Gemma 4 + SAM3 on Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.25.0",
    "mlx-vlm>=0.1.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]
